--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DATABASE_URL=your_local_database_url
+DATABASE_URL=postgresql://postgres://shobhit:password@ec2-1-2-3-4.compute-1.amazonaws.com:5432/my-discuss-app
+
+
